gradle build and new development