@@ -4,45 +4,46 @@
  * Contributors:
  *     Manu Varghese
  *******************************************************************************/
+
 package com.pega.gcs.fringecommon.guiutilities;
 
 public class FileReadTaskInfo implements Comparable<FileReadTaskInfo> {
 
-	private long fileSize;
+    private long fileSize;
 
-	private long fileRead;
+    private long fileRead;
 
-	public FileReadTaskInfo(long fileSize, long fileRead) {
-		super();
-		this.fileSize = fileSize;
-		this.fileRead = fileRead;
-	}
+    public FileReadTaskInfo(long fileSize, long fileRead) {
+        super();
+        this.fileSize = fileSize;
+        this.fileRead = fileRead;
+    }
 
-	public long getFileSize() {
-		return fileSize;
-	}
+    public long getFileSize() {
+        return fileSize;
+    }
 
-	public long getFileRead() {
-		return fileRead;
-	}
+    public long getFileRead() {
+        return fileRead;
+    }
 
-	@Override
-	public int compareTo(FileReadTaskInfo o) {
+    @Override
+    public int compareTo(FileReadTaskInfo other) {
 
-		if (this.fileSize != o.fileSize) {
+        if (this.fileSize != other.fileSize) {
 
-			Long thisFileSize = new Long(getFileSize());
-			Long otherFileSize = new Long(o.getFileSize());
+            Long thisFileSize = Long.valueOf(getFileSize());
+            Long otherFileSize = Long.valueOf(other.getFileSize());
 
-			return thisFileSize.compareTo(otherFileSize);
+            return thisFileSize.compareTo(otherFileSize);
 
-		} else {
-			Long thisFileRead = new Long(getFileRead());
-			Long otherFileRead = new Long(o.getFileRead());
+        } else {
+            Long thisFileRead = Long.valueOf(getFileRead());
+            Long otherFileRead = Long.valueOf(other.getFileRead());
 
-			return thisFileRead.compareTo(otherFileRead);
+            return thisFileRead.compareTo(otherFileRead);
 
-		}
-	}
+        }
+    }
 
 }
